# pynajax

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
benchmarks/: benchmark_convolve.py  benchmark_count.py
docs/: gallery_conf.py  index.md
docs/examples/: README.md  plot_benchmark_bin_average.py  plot_benchmark_convolve.py  plot_benchmark_event_trigger_average.py  plot_benchmark_filtering.py  plot_benchmark_threshold.py
reference/SUMMARY/: index.html
reference/pynajax/: index.html
reference/pynajax/jax_core/: index.html
reference/pynajax/jax_core_bin_average/: index.html
reference/pynajax/jax_core_convolve/: index.html
reference/pynajax/jax_core_threshold/: index.html
reference/pynajax/jax_process_filtering/: index.html
reference/pynajax/jax_process_perievent/: index.html
reference/pynajax/utils/: index.html
search/: search_index.json
src/pynajax/: __init__.py  iir_filtering.py  jax_core.py  jax_core_bin_average.py  jax_core_convolve.py  jax_core_count.py  jax_core_restrict.py  jax_core_sta.py  jax_core_threshold.py  jax_process_filtering.py  jax_process_perievent.py  recursive_filter.py  utils.py
tests/: __init__.py  conftest.py  mock.py  test_iir_recursion.py  test_jax_core.py  test_jax_core_convolve.py  test_jax_core_count.py  test_jax_core_perievent.py  test_jax_core_restrict.py  test_jax_filtering.py  test_jax_numpy_compatibility.py  test_pynapple.py  test_utils.py
